--- a/index2.html
+++ b/index2.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>varshi</title>
+    <title>Document</title>
 </head>
 <body>
     <form action="./index3.html" method="post" autocomplete="on" >
-    <center><h1>login</h1></center>
-    <label for="email"></label>
-    <center><input type="email" id="email"placeholder="enter a email"><br></br></center>
-    <label for="password"></label>
-    <center><input type="password"id="password" placeholder="enter a password" required><br></br></center>
-    <center><input type="submit"value="login"></center>
+        <center><h1>login</h1></center>
+        <label for="email"></label>
+        <center><input type="email" id="email"placeholder="enter a email"><br></br></center>
+        <label for="password"></label>
+        <center><input type="password"id="password" placeholder="enter a password" required><br></br></center>
+        <center><input type="submit"value="login"></center>
 </body>
 </html>
